fixing spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -13,77 +13,3 @@ img {
     text-align: center;
 }
 
-
-
-            #exampleModalLabel {
-  color: #4A4949;
-  font-weight: bold;
-  font-size: 32px;
-  font-family: 'Lato', sans-serif;
-}
-.mc-field-group {
-  color: #151414;
-  text-align: left;
-
-}
-
-.modalBodyText {
-  font-family: 'Montserrat', sans-serif;
-  font-size: 1.25rem;
-  font-weight: normal;
-}
-
-.disclaimer {
-  font-size: 16px;
-  color: #151414;
-  text-align: left;
-}
-
-input {
-  background-color: #FFFFFF;
-  border-color: #6D757C;
-  margin-bottom: 20px;
-}
-label {
-  margin-bottom: 0.5px;
-}
-input, label {
-  display: block;
-  text-align: left;
-}
-
-#closeButton {
-  color: #09A4D6;
-  text-align: right;
-  display: inline-block;
-  font-size: 20px;
-  margin-right: 2px;
-  font-family: 'Lato', sans-serif;
-  text-decoration: underline;
-  background-color: transparent;
-  border: 0px solid transparent;
-}
-
-#mc-embedded-subscribe {
-  background-color: #09A4D6;
-  border: none;
-  color: #FFFFFF;
-  font-size: 20px;
-  font-family: 'Lato', sans-serif;
-  text-align: center;
-  display: inline-block;
-  text-align: right;  
-}
-
-#mc_embed_signup .clear {
-  text-align: right;
-}
-
-h3 {
-  font-size: 1.25rem;
-}
-
-#mc-embedded-subscribe:disabled
-{
-    background:#CCCCCC;
-}
